# fbm-analysis

./: .gitignore  LDA.qmd  RAG.ipynb  RAG.qmd  README.md  data_import.py  lda.py  main.qmd  pyproject.toml  rag_demo.py  rag_interact.py  rag_memory_demo.py  rag_process_data.py  requirements.txt  retriever.py  text_splitter.py
functions/: fbmessenger.py
modules/: models.py  preprocessing.py  rag_demo.py
modules/lda/: models.py  preprocessing.py
modules/rag/: models.py  rag_demo.py
