[project]
name = "fbm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "gensim>=4.3.3",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.3",
    "marimo>=0.13.15",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
]
